<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/editor_layout"
                android:background="@color/mainBackgroundColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/preview_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">
        <android.opengl.GLSurfaceView
            android:id="@+id/preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/play_control_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/qn_play"
            android:visibility="gone" />

        <com.qiniu.shortvideo.app.view.layer.StickerViewGroup
            android:id="@+id/sticker_container_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/transparent" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="start|center_vertical"
            android:gravity="center"
            android:onClick="onClickBack"
            android:text="@string/back"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/next_btn"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rectangle_btn_background"
            android:gravity="center"
            android:onClick="onClickSaveEdit"
            android:text="@string/finish"
            android:textColor="@android:color/white"/>
    </FrameLayout>

    <HorizontalScrollView
        android:id="@+id/edit_bottom_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/advanced_filter_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:drawableTop="@mipmap/qn_tutu_filter"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickAdvancedFilter"
                android:text="@string/advanced_filter_string"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/special_effect_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/advanced_filter_btn"
                android:drawableTop="@mipmap/qn_effect"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickEffect"
                android:text="@string/special_effect_string"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/gif_sticker_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/special_effect_btn"
                android:drawableTop="@mipmap/qn_gif"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickGifStickers"
                android:text="@string/gif_btn_string"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/mv_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/gif_sticker_btn"
                android:drawableTop="@mipmap/qn_mv"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickMv"
                android:text="@string/mv_btn_string"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/paint_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/mv_btn"
                android:drawableTop="@mipmap/qn_graffiti"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickPaint"
                android:text="@string/paint_string"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/text_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/paint_btn"
                android:drawableTop="@mipmap/qn_text"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickTextSticker"
                android:text="@string/text_string"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/music_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text_btn"
                android:drawableTop="@mipmap/qn_music"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickChooseMusic"
                android:text="@string/audio_mix_string"
                android:textColor="@color/colorWhite"/>

            <TextView
                android:id="@+id/volume_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/music_btn"
                android:drawableTop="@mipmap/qn_volume"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickVolumeSetting"
                android:text="@string/volume_string"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/filter_btn"
                android:layout_width="@dimen/bottom_bar_width"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/volume_btn"
                android:drawableTop="@mipmap/qn_filter"
                android:drawablePadding="@dimen/drawable_padding"
                android:gravity="center"
                android:onClick="onClickFilterSelect"
                android:text="@string/filter_string"
                android:textColor="@android:color/white"/>
        </RelativeLayout>
    </HorizontalScrollView>
</RelativeLayout>
