<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/video_record_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.opengl.GLSurfaceView
        android:id="@+id/preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

    <com.qiniu.shortvideo.app.view.SectionProgressBar
        android:id="@+id/section_progress_bar"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:drawableTop="@mipmap/qn_icon_close"
        android:drawablePadding="@dimen/drawable_padding"
        android:onClick="onClickBack"
        android:text="@string/quit"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/section_progress_bar"/>

    <TextView
        android:id="@+id/flash_light_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawableTop="@mipmap/qn_flash_off"
        android:drawablePadding="@dimen/drawable_padding"
        android:onClick="onClickSwitchFlash"
        android:text="@string/flash_light"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toTopOf="@+id/back_btn"/>

    <TextView
        android:id="@+id/switch_camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:drawableTop="@mipmap/qn_flip"
        android:drawablePadding="@dimen/drawable_padding"
        android:onClick="onClickSwitchCamera"
        android:text="@string/switch_camera"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/flash_light_btn"
        app:layout_constraintStart_toEndOf="@+id/flash_light_btn"
        app:layout_constraintTop_toTopOf="@+id/flash_light_btn"/>

    <Button
        android:id="@+id/next_btn"
        android:layout_width="64dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rectangle_btn_background"
        android:onClick="onClickConcatSections"
        android:text="@string/go_to_edit"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/switch_camera_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/switch_camera_btn"/>

    <TextView
        android:id="@+id/music_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:drawableTop="@mipmap/qn_music"
        android:drawablePadding="@dimen/drawable_padding"
        android:onClick="onClickChooseMusic"
        android:text="@string/audio_mix_string"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="@+id/next_btn"
        app:layout_constraintTop_toBottomOf="@+id/next_btn"/>

    <TextView
        android:id="@+id/filter_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:drawableTop="@mipmap/qn_filter"
        android:drawablePadding="@dimen/drawable_padding"
        android:onClick="onClickFilterSelect"
        android:text="@string/filter_string"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/music_btn"
        app:layout_constraintStart_toStartOf="@+id/music_btn"
        app:layout_constraintTop_toBottomOf="@+id/music_btn"/>

    <ImageButton
        android:id="@+id/sticker_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="5dp"
        android:background="@color/colorTransparent"
        android:onClick="onClickStickers"
        android:src="@mipmap/qn_sticker"
        app:layout_constraintBottom_toBottomOf="@+id/record_btn"
        app:layout_constraintEnd_toStartOf="@+id/record_btn"
        app:layout_constraintTop_toTopOf="@+id/record_btn"/>

    <Button
        android:id="@+id/record_btn"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="48dp"
        android:background="@mipmap/qn_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/preview"
        app:layout_constraintStart_toStartOf="parent"/>

    <RelativeLayout
        android:id="@+id/record_mode_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/record_mode_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/record_mode_video"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/record_mode_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_toEndOf="@id/record_mode_video"
            android:gravity="center"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:text="@string/record_mode_picture"
            android:textColor="@color/white"/>

        <View
            android:layout_width="32dp"
            android:layout_height="1dp"
            android:layout_below="@id/record_mode_video"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="4dp"
            android:background="@color/white"/>
    </RelativeLayout>

    <ImageButton
        android:id="@+id/delete_section_btn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/transparent"
        android:onClick="onClickDeleteLastSection"
        android:src="@mipmap/qn_delete_section_inactive"
        app:layout_constraintBottom_toBottomOf="@+id/record_btn"
        app:layout_constraintStart_toEndOf="@+id/record_btn"
        app:layout_constraintTop_toTopOf="@+id/record_btn"/>

    <TextView
        android:id="@+id/super_slow_speed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSpeedPanel"
        android:gravity="center"
        android:onClick="onSpeedClicked"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/super_slow"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/slow_speed_btn"
        app:layout_constraintEnd_toStartOf="@+id/slow_speed_btn"/>

    <TextView
        android:id="@+id/slow_speed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSpeedPanel"
        android:gravity="center"
        android:onClick="onSpeedClicked"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/slow"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/normal_speed_btn"
        app:layout_constraintEnd_toStartOf="@+id/normal_speed_btn"/>

    <TextView
        android:id="@+id/normal_speed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:background="@color/colorSpeedPanel"
        android:gravity="center"
        android:onClick="onSpeedClicked"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/normal"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/record_btn"
        app:layout_constraintEnd_toEndOf="@+id/record_btn"
        app:layout_constraintStart_toStartOf="@+id/record_btn"/>

    <TextView
        android:id="@+id/fast_speed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSpeedPanel"
        android:gravity="center"
        android:onClick="onSpeedClicked"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/fast"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/normal_speed_btn"
        app:layout_constraintStart_toEndOf="@+id/normal_speed_btn"/>

    <TextView
        android:id="@+id/super_fast_speed_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSpeedPanel"
        android:gravity="center"
        android:onClick="onSpeedClicked"
        android:paddingLeft="16dp"
        android:paddingTop="8dp"
        android:paddingRight="16dp"
        android:paddingBottom="8dp"
        android:text="@string/super_fast"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/fast_speed_btn"
        app:layout_constraintStart_toEndOf="@+id/fast_speed_btn"/>

    <TextView
        android:id="@+id/effect_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text=""
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/face_unity_guideline"
        app:layout_constraintStart_toStartOf="@+id/preview"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"/>

    <TextView
        android:id="@+id/face_unity_effect_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/face_unity_guideline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.qiniu.shortvideo.app.faceunity.BeautyControlView
        android:id="@+id/face_unity_panel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/face_unity_guideline"/>

    <com.qiniu.shortvideo.app.view.ListBottomView
        android:id="@+id/filter_select_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/record_btn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="back_btn,super_fast_speed_btn,sticker_btn,next_btn,record_btn,delete_section_btn,slow_speed_btn,super_slow_speed_btn,fast_speed_btn,normal_speed_btn,music_btn,flash_light_btn,filter_btn,switch_camera_btn,record_mode_layout"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-60dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
